# order-management-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  ~$ЧТЗ.docx  ~$четания.docx  Сочетания.docx  ЧТЗ.docx
src/: main.py
src/alembic/versions/: 2025_09_29_0006-a59629a2094f_users_table.py  2025_09_29_0012-e50d932a150c_users_table_add_login.py  2025_09_30_0258-de4d8466beb5_init_tables.py  2025_10_17_2321-cf8048d25600_remove_status_id_from_baskets.py  2025_10_17_2323-0e1457bc5224_remove_status_id_from_baskets.py  2025_10_17_2331-5b4d7acc85c9_remove_basket_id_from_basket_items.py  2025_10_18_0107-80bccd4ceb30_remove_price_from_basket_products.py  2025_10_29_1532-45dfd4a5c14b_create_a_table_for_reviews_with_files.py  2025_10_29_1537-84f98af6b1d8_create_a_table_for_reviews_with_files_.py  2025_10_29_1538-4e965b423a4d_update_table_name.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  baskets.py  orders.py  products.py  users.py
src/api/query_params/: product_query_params.py
src/core/: config.py  constants.py
src/core/dependencies/: auth.py  repositories.py  services.py
src/core/exceptions/: author.py  basket.py  order.py  order_product.py  product.py  role.py  status.py  user.py
src/core/models/: __init__.py  author.py  base.py  basket.py  basket_product.py  basket_status.py  db_helper.py  order.py  order_product.py  order_status.py  product.py  review.py  review_file.py  role.py  user.py
src/core/repositories/: author_repository.py  basket_product_repository.py  basket_repository.py  order_repository.py  (+6 more)
src/utils/: password_encryptor.py
(+27 files in other folders)
