[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = {extras = ["email"], version = "^2.11.9"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
alembic = "^1.16.5"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
